[fix] fixed mobile bottom nav & content overlaping.

--- a/src/sass/pages/plan-and-pricing.sass
+++ b/src/sass/pages/plan-and-pricing.sass
@@ -20,6 +20,8 @@
 .plan-and-pricing
     @include mixins.dashboard-container
 
+    margin-bottom: var(--mobile-nav-height)
+
     &__buttons-wrapper
         margin-bottom: 3em !important
         display: flex
